Changes to index & recruiter login
new changes

--- a/recruiter-login.html
+++ b/recruiter-login.html
@@ -19,8 +19,8 @@
       <!-- Menu -->
     <div>
       <ul class="vertical menu">
-        <li><a href="recruiter-login.html">Discover Talent</a></li>
-        <li><a href="recruiter-login.html">Refer Talent</a></li>
+        <li><a href="#">Discover Talent</a></li>
+        <li><a href="#">Refer Talent</a></li>
       </ul>
     </div>
     </div>
