--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
   <div class="wrap">
     <div class="row">
       <div class="small-12 columns">
-        <h2>Let's partner, here's how!</h2>
+        <h3><b>Let's partner, here's how!</b></h3>
       </div>
     </div>
 
