Updates to file & index
app.css file - updated link to recruiter page

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div>
         <ul class="vertical menu">
           <li><a href="#">Discover Talent</a></li>
-          <li><a href="/recruiter-login.html">Refer Talent</a></li>
+          <li><a href="#">Refer Talent</a></li>
         </ul>
 
       </div>
